changed background color to white
minor edits and tweaks...please see the diff for details

--- a/www/usemodels/Deduplicate.html
+++ b/www/usemodels/Deduplicate.html
@@ -4,7 +4,8 @@
     <title>Screen Description: Deduplicate</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Screen Description: Deduplicate</h1>
 
 <a name="UNIQUE-ID"></a>
@@ -16,8 +17,7 @@
   <tr>
     <td bgcolor="white" align="right" valign="top"><b>Purpose:</b></td>
     <td bgcolor="white" valign="top">
-       Show user a list of existing issues that might match the one the user thought to enter, thus reducing duplicate issues. 
-    </td>
+       Show user a list of existing issues that might match the one the user thought to enter, thus reducing duplicate issues.</td>
   </tr>
   <tr>
     <td bgcolor="white" valign="top" colspan="2"><b>Contents:</b><br> 
@@ -25,6 +25,8 @@
         <li>List of potential matching issues
         <li>ability to indicate which existing issues (if any) are the same as the new one
         <li>ability to indicate that no existing issues are the same
+        <li>ability to add a comment to an issue.
+        <li>ability to add a vote to an issue.
       </ol>
     </td>
   </tr>
