--- a/www/usemodels/IntegrateView.html
+++ b/www/usemodels/IntegrateView.html
@@ -1,27 +1,27 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>Screen Description: ProjectView</TITLE>
-<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
-<META content="MSHTML 5.00.3019.2500" name=GENERATOR></HEAD>
-<BODY>
-<H1>Screen Description: IntegrateView</H1>
-<A name=UNIQUE-ID></A>
-<TABLE bgColor=#cccccc border=0 cellSpacing=1 width="100%">
-  <TBODY>
-  <TR>
-    <TD align=right bgColor=white vAlign=top><B>Name:</B></TD>
-    <TD bgColor=white vAlign=top>IntegrateView</TD>
-  </TR>
-  <TR>
-    <TD align=right bgColor=white vAlign=top><B>Purpose:</B></TD>
-    <TD bgColor=white vAlign=top>
-      <P>Show user a list of Commit ID's that potentially match the Issue ID.</P>
-    </TD></TR>
-  <TR>
-    <TD bgColor=white colSpan=2 vAlign=top><B>Contents:</B><BR>
-      <OL>
-        <LI>List of Commit ID's that potentially match the Issue ID
-        <LI>Ability for user to establish a link between an Issue ID and a Commit 
-          ID when attempting to close or declare an Issue as &quot;Fixed&quot;</LI>
-      </OL></TD></TR></TBODY></TABLE><BR>
-<HR>
-<BR><!-- --------------------------------------------------------------- --></BODY></HTML>
+<html><head><title>Screen Description: ProjectView</title>
+<meta content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<meta content="MSHTML 5.00.3019.2500" name=GENERATOR></head>
+<body bgcolor="#FFFFFF">
+<h1>Screen Description: IntegrateView</h1>
+<a name=UNIQUE-ID></a>
+<table bgcolor=#cccccc border=0 cellspacing=1 width="100%">
+  <tbody>
+  <tr>
+    <td align=right bgcolor=white valign=top><b>Name:</b></td>
+    <td bgcolor=white valign=top>IntegrateView</td>
+  </tr>
+  <tr>
+    <td align=right bgcolor=white valign=top><b>Purpose:</b></td>
+    <td bgcolor=white valign=top>
+      <p>Show user a list of Commit ID's that potentially match the Issue ID.</p>
+    </td></tr>
+  <tr>
+    <td bgcolor=white colspan=2 valign=top><b>Contents:</b><br>
+      <ol>
+        <li>List of Commit ID's that potentially match the Issue ID
+        <li>Ability for user to establish a link between an Issue ID and a Commit 
+          ID when attempting to close or declare an Issue as &quot;Fixed&quot;</li>
+      </ol></td></tr></tbody></table><br>
+<hr>
+<br><!-- --------------------------------------------------------------- --></body></html>
