--- a/www/usemodels/IssueList.html
+++ b/www/usemodels/IssueList.html
@@ -4,7 +4,8 @@
     <title>Screen Description: IssueList</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Screen Description: IssueList</h1>
 
 <a name="UNIQUE-ID"></a>
@@ -24,8 +25,9 @@
       <ol>
         <li>Table of search results
          <ul>
-           <li>columns sortable
-           <li>each issue a link to IssueView
+            <li>columns sortable
+(issuezilla can currently sort all the clicked columns, but it cannot sort all of the clicked columns and then change the sort order (ie: top/bottom-&gt;bottom/top) of a selected column. that would be a nice feature. example: sort by date + priority and have p1 sort before p2 or be able to reverse it to have p2 sort before p1)
+            <li>each issue a link to IssueView
          </ul>
         <li>Link to configure columns
         <li>Link to long results mode
