--- a/www/usemodels/IssueView.html
+++ b/www/usemodels/IssueView.html
@@ -4,7 +4,8 @@
     <title>Screen Description: IssueView</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Screen Description: IssueView</h1>
 
 <a name="UNIQUE-ID"></a>
@@ -17,8 +18,7 @@
     <td bgcolor="white" align="right" valign="top"><b>Purpose:</b></td>
     <td bgcolor="white" valign="top">
        Show all fields of a given issue, and ability to edit.  Similar
-       to Bugzilla bug view page.
-    </td>
+       to Bugzilla bug view page. Fields that the user does not have permission to modify cannot be modified.</td>
   </tr>
   <tr>
     <td bgcolor="white" valign="top" colspan="2"><b>Contents:</b><br> 
