--- a/www/usemodels/ReportsPage.html
+++ b/www/usemodels/ReportsPage.html
@@ -1,28 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>Screen Description: Reports Page</TITLE>
-<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
-<META content="MSHTML 5.00.3019.2500" name=GENERATOR></HEAD>
-<BODY>
-<H1>Screen Description: Reports Page</H1><A name=UNIQUE-ID></A>
-<TABLE bgColor=#cccccc border=0 cellSpacing=1 width="100%">
-  <TBODY>
-  <TR>
-    <TD align=right bgColor=white vAlign=top><B>Name:</B></TD>
-    <TD bgColor=white vAlign=top>Reports Page</TD></TR>
-  <TR>
-    <TD align=right bgColor=white vAlign=top><B>Purpose:</B></TD>
-    <TD bgColor=white vAlign=top>Allow user to view and/or print from a selection of available reports 
-      </TD></TR>
-  <TR>
-    <TD bgColor=white colSpan=2 vAlign=top><B>Contents:</B><BR>
-      <OL>
-        <LI>Link from ProjectIssues page
-        <LI>Reports broken into seperate categories: Predefined Reports and MyReports
-        <LI>Checkboxes or something to allow user to select more than one or more 
+<html><head><title>Screen Description: Reports Page</title>
+<meta content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<meta content="MSHTML 5.00.3019.2500" name=GENERATOR></head>
+<body bgcolor="#FFFFFF">
+<h1>Screen Description: Reports Page</h1><a name=UNIQUE-ID></a>
+<table bgcolor=#cccccc border=0 cellspacing=1 width="100%">
+  <tbody>
+  <tr>
+    <td align=right bgcolor=white valign=top><b>Name:</b></td>
+    <td bgcolor=white valign=top>Reports Page</td></tr>
+  <tr>
+    <td align=right bgcolor=white valign=top><b>Purpose:</b></td>
+    <td bgcolor=white valign=top>Allow user to view and/or print from a selection of available reports 
+      </td></tr>
+  <tr>
+    <td bgcolor=white colspan=2 valign=top><b>Contents:</b><br>
+      <ol>
+        <li>Link from ProjectIssues page
+        <li>Reports broken into seperate categories: Predefined Reports and MyReports
+        <li>Checkboxes or something to allow user to select more than one or more 
           report
-        <LI>Buttons: View, Print and Automate</LI>
-        <LI>Help-sticky notes</LI>
-      </OL>
-    </TD></TR></TBODY></TABLE><BR>
-<HR>
-<BR><!-- --------------------------------------------------------------- --></BODY></HTML>
+        <li>Buttons: View, Print and Automate</li>
+        <li>Help-sticky notes</li>
+      </ol>
+    </td></tr></tbody></table><br>
+<hr>
+<br><!-- --------------------------------------------------------------- --></body></html>
