--- a/www/usemodels/basicreporting.html
+++ b/www/usemodels/basicreporting.html
@@ -4,7 +4,8 @@
     <title>Basic Reporting Use Cases</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Basic Reporting Use Cases</h1>
 
 <!-- --------------------------------------------------------------- -->
@@ -72,7 +73,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Main Success Scenario:</b> 
+    <td bgcolor="white"  colspan="2" valign="top"><b>Main Success Scenario:</b> 
       <ol>
         <li> User: visit <a href="ProjectIssues.html">ProjectIssues</a> for a 
           given project. Selects Reports page link
@@ -87,7 +88,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b>
+    <td bgcolor="white"  colspan="2" valign="top"><b>Alternative Scenario Extensions:</b>
       <ul>
         <li> None
       </ul>
@@ -97,86 +98,86 @@
 <br><hr><br>
 <!-- --------------------------------------------------------------- -->
   <a name="UC-19"></a>
-<TABLE bgColor=#cccccc border=0 cellSpacing=1 width="100%">
-        <TBODY>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Name:</B></TD>
+<table bgcolor=#cccccc border=0 cellspacing=1 width="100%">
+        <tbody>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Name:</b></td>
           
-    <TD bgColor=white vAlign=top>UC-19: User Views and Prints a MyReports report 
-    </TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top height="59"><B>Extends:</B></TD>
-          <TD bgColor=white vAlign=top height="59">Use Case for creating a MyReport</TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Purpose:</B></TD>
-          <TD bgColor=white vAlign=top>User can select a MyReports report and 
+    <td bgcolor=white valign=top>UC-19: User Views and Prints a MyReports report 
+    </td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top height="59"><b>Extends:</b></td>
+          <td bgcolor=white valign=top height="59">Use Case for creating a MyReport</td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Purpose:</b></td>
+          <td bgcolor=white valign=top>User can select a MyReports report and 
             then view and/or print that report. The MyReports report allows the 
             use to view/print their own customized report. The report would have 
-            been created earlier.</TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Feature(s):</B></TD>
-          <TD bgColor=white vAlign=top><A 
-            href="http://www.tigris.org/features/feature.html">FeatureName</A></TD></TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Direct Actors:</B></TD>
-          <TD bgColor=white vAlign=top>CompOwner: Component Owner (High Priority, 
-            High Frequency)<BR>
-            Scarab: The scarab system. </TD></TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Stakeholders:</B></TD>
-          <TD bgColor=white vAlign=top>CompOwner: <BR>
-          </TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Prereq:</B></TD>
-          <TD bgColor=white vAlign=top>           
-            Logged In<BR>
-            Project set up<BR>
+            been created earlier.</td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Feature(s):</b></td>
+          <td bgcolor=white valign=top><a 
+            href="http://www.tigris.org/features/feature.html">FeatureName</a></td></tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Direct Actors:</b></td>
+          <td bgcolor=white valign=top>CompOwner: Component Owner (High Priority, 
+            High Frequency)<br>
+            Scarab: The scarab system. </td></tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Stakeholders:</b></td>
+          <td bgcolor=white valign=top>CompOwner: <br>
+          </td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Prereq:</b></td>
+          <td bgcolor=white valign=top>           
+            Logged In<br>
+            Project set up<br>
             User has access to the project <br>
-            Report has already been created and saved by user</TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Results:</B></TD>
-          <TD bgColor=white vAlign=top>User views and/or prints a predefined report</TD>
-        </TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Data sets:</B></TD>
-          <TD bgColor=white vAlign=top><BR>
-          </TD></TR>
-        <TR>
-          <TD align=right bgColor=white vAlign=top><B>Notes/Questions:</B></TD>
-          <TD bgColor=white vAlign=top> Does it make sense to have a seperate 
+            Report has already been created and saved by user</td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Results:</b></td>
+          <td bgcolor=white valign=top>User views and/or prints a predefined report</td>
+        </tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Data sets:</b></td>
+          <td bgcolor=white valign=top><br>
+          </td></tr>
+        <tr>
+          <td align=right bgcolor=white valign=top><b>Notes/Questions:</b></td>
+          <td bgcolor=white valign=top> Does it make sense to have a seperate 
             Reports Page? Maybe a link in SourceCast on Developer Homepage?<br>
             Reports link from ProjectIssues page to a Reports Page?<br>
-			No anonymous users can view and print reports<BR>
+			No anonymous users can view and print reports<br>
             MyReports reports are project specific? Or should they be across all 
             of the user's projects? <br>
-			Should Scarab display a Print Confirmation window or message or just print?</TD>
-        </TR>
-        <TR>
-          <TD bgColor=white colSpan=2 vAlign=top><B>Main Success Scenario:</B> 
-            <OL>
+			Should Scarab display a Print Confirmation window or message or just print?</td>
+        </tr>
+        <tr>
+          <td bgcolor=white colspan=2 valign=top><b>Main Success Scenario:</b> 
+            <ol>
               
-        <LI>CompOwner: visit <a href="ProjectIssues.html">ProjectIssues page</a> 
+        <li>CompOwner: visit <a href="ProjectIssues.html">ProjectIssues page</a> 
           and selects Reports Page link. 
-        <LI>Scarab: display <a href="ReportsPage.html">Reports Page</a> 
-              <LI>CompOwner: selects either one or several of available MyReports 
+        <li>Scarab: display <a href="ReportsPage.html">Reports Page</a> 
+              <li>CompOwner: selects either one or several of available MyReports 
                 reports. 
-              <LI>Scarab: Displays selected MyReports report(s) 
-              <LI>CompOwner: views selected report and clicks &quot;Print&quot; 
-              <LI>Scarab: display a Print Confirmation window/message</LI>
-              <LI>CompOwner: confirms Print Confirmation
-              <LI>Scarab: prints report(s) to user's printer
-            </OL>
-          </TD></TR>
-        <TR>
-          <TD bgColor=white colSpan=2 vAlign=top><B>Alternative Scenario 
-            Extensions:</B> 
-            <UL>
-              <LI>None </LI></UL></TD></TR></TBODY></TABLE><BR>
+              <li>Scarab: Displays selected MyReports report(s) 
+              <li>CompOwner: views selected report and clicks &quot;Print&quot; 
+              <li>Scarab: display a Print Confirmation window/message</li>
+              <li>CompOwner: confirms Print Confirmation
+              <li>Scarab: prints report(s) to user's printer
+            </ol>
+          </td></tr>
+        <tr>
+          <td bgcolor=white colspan=2 valign=top><b>Alternative Scenario 
+            Extensions:</b> 
+            <ul>
+              <li>None </li></ul></td></tr></tbody></table><br>
 
 <br><hr><br>
 <!-- --------------------------------------------------------------- -->
@@ -227,14 +228,14 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Main Success Scenario:</b> 
+    <td bgcolor="white"  colspan="2" valign="top"><b>Main Success Scenario:</b> 
       <ol>
         <li> TBD  </li>
       </ol>
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b>
+    <td bgcolor="white"  colspan="2" valign="top"><b>Alternative Scenario Extensions:</b>
       <ul>
         <li> None
       </ul>
@@ -289,14 +290,14 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Main Success Scenario:</b> 
+    <td bgcolor="white"  colspan="2" valign="top"><b>Main Success Scenario:</b> 
       <ol>
         <li> TBD  </li>
       </ol>
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b>
+    <td bgcolor="white"  colspan="2" valign="top"><b>Alternative Scenario Extensions:</b>
       <ul>
         <li> None
       </ul>
