--- a/www/usemodels/format-screens.html
+++ b/www/usemodels/format-screens.html
@@ -4,7 +4,8 @@
     <title>Format of Screen Descriptions</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Format of screen descriptions</h1>
 
 
@@ -59,7 +60,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> The goal of describing screens is to prompt and guide careful 
              thought about how they system will be used and how it should be built.
