--- a/www/usemodels/format-usecases.html
+++ b/www/usemodels/format-usecases.html
@@ -4,7 +4,8 @@
     <title>Format of use cases</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Format of use cases</h1>
 
 
@@ -78,7 +79,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Main Success Scenario:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Main Success Scenario:</b><br>
       <ol>
         <li> Steps leading to the successful completion of the use case
         <li> Each takes the form "[label] actor-id: short pharase in active voice"
@@ -102,7 +103,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Alternative Scenario Extensions:</b><br>
       <ul>
         <li> Each item here should make reference to one of the labeled steps above 
              and provide an alternative or optional additional step.
@@ -112,7 +113,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> The goal of writing use cases is to prompt and guide careful 
              thought about how they system will be used and how it should be built.
