--- a/www/usemodels/format-userclasses.html
+++ b/www/usemodels/format-userclasses.html
@@ -4,7 +4,8 @@
     <title>Format of user classes</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Format of user classes</h1>
 
 
@@ -68,7 +69,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> The goal of writing user classes is to prompt and guide careful 
              thought about how they system will be used and how it should be built.
@@ -114,7 +115,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> The goal of writing user classes is to prompt and guide careful 
              thought about how they system will be used and how it should be built.
