--- a/www/usemodels/index.html
+++ b/www/usemodels/index.html
@@ -4,7 +4,8 @@
     <title>Scarab use cases and related documents</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Scarab use cases and related documents</h1>
 
 <ul>
