--- a/www/usemodels/integration.html
+++ b/www/usemodels/integration.html
@@ -4,7 +4,8 @@
     <title>Integration Use Cases</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Integration Use Cases</h1>
 
 <!-- --------------------------------------------------------------- -->
@@ -79,7 +80,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Main Success Scenario:</b> 
+    <td bgcolor="white"  colspan="2" valign="top"><b>Main Success Scenario:</b> 
       <ol>
         <li> User: visit <a href="IssuesView.html">IssuesView</a> for a given 
           project 
@@ -110,7 +111,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white"  COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b>
+    <td bgcolor="white"  colspan="2" valign="top"><b>Alternative Scenario Extensions:</b>
       <ul>
         <li> None
       </ul>
