--- a/www/usemodels/screens.html
+++ b/www/usemodels/screens.html
@@ -4,7 +4,8 @@
     <title>Scarab Screen Descriptions</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Scarab Screen Descriptions</h1>
 
 <ul>
