--- a/www/usemodels/template.html
+++ b/www/usemodels/template.html
@@ -1,4 +1,5 @@
 
+<body bgcolor="#FFFFFF">
 <a name="UC-03"></a>
 <table width="100%" border="0" cellspacing="1" bgcolor="#cccccc">
   <tr>
@@ -66,7 +67,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Main Success Scenario:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Main Success Scenario:</b><br>
       <ol>
         <li> User: visit ProjectIssues, or any Scarab page in project context.  
         <li> User: Enter issue ID into small field and hit button 
@@ -76,14 +77,14 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Alternative Scenario Extensions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Alternative Scenario Extensions:</b><br>
       <ul>
         <li> [validation] if validation fails, Scarab displays InvalidIssueNumber page
       </ul>
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
        <ul>
          <li>If all issues are in project context, is there a quick way to jump to issue in another project?  
          <li>How can this functionality be put on tigris StartPage?
