--- a/www/usemodels/userclasses.html
+++ b/www/usemodels/userclasses.html
@@ -4,7 +4,8 @@
     <title>Scarab User Classes</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Scarab User Classes</h1>
 
 <p><a href="format-userclasses.html">Format of user classes</a></p>
@@ -35,7 +36,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> No contact information
         <li> emphasize learnability
@@ -72,7 +73,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> Has real account with role in project and contact info.
       </ul>
@@ -111,7 +112,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> None
       </ul>
@@ -147,7 +148,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> None
       </ul>
@@ -186,7 +187,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> None
       </ul>
@@ -229,7 +230,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> None
       </ul>
@@ -263,7 +264,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> None
       </ul>
@@ -299,7 +300,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> Does not work directly with the tool much.  
       </ul>
@@ -339,7 +340,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li> Information visibility with system limited by the
         terms of an NDA.  Works more closely with regular developers.
@@ -379,7 +380,7 @@
     </td>
   </tr>
   <tr>
-    <td bgcolor="white" COLSPAN="2" valign="top"><b>Notes/Questions:</b><br>
+    <td bgcolor="white" colspan="2" valign="top"><b>Notes/Questions:</b><br>
       <ul>
         <li>Information visibility with system highly limited by the
         terms of an NDA.  Does not work closely with regular developers.
