--- a/www/usemodels/IssueEnteredConfirmation.html
+++ b/www/usemodels/IssueEnteredConfirmation.html
@@ -4,7 +4,8 @@
     <title>Screen Description: IssueChangedConfirmation</title>
   </head>
 
-  <body>
+  
+<body bgcolor="#FFFFFF">
     <h1>Screen Description: IssueChangedConfirmation</h1>
 
 <a name="UNIQUE-ID"></a>
