Updated reporting use cases

--- a/www/usemodels/usecases.html
+++ b/www/usemodels/usecases.html
@@ -41,10 +41,12 @@
 
   <li>Basic Reporting:
     <ul>
-      <li><a href="basicreporting.html#UC-18">Printing a Predefined Report</a>
-      <li><a href="basicreporting.html#UC-19">Printing a MyReports Report</a>
-      <li><a href="basicreporting.html#UC-20">Automating a Report</a>
-      <li><a href="basicreporting.html#UC-21">Change a MyReport to a Predefined Report</a>
+      <li><a href="basicreporting.html#UC-18">Printing a Predefined Report</a> 
+      <li> <a href="basicreporting.html#UC-19">Creating a MyReports Report</a> 
+      <li><a href="basicreporting.html#UC-20">Printing a MyReports Report</a> 
+      <li><a href="basicreporting.html#UC-21">Automating/Batching a Report</a> 
+      <li><a href="basicreporting.html#UC-22">Change a MyReport to a Predefined 
+        Report</a> 
     </ul> 
 
  <li>Integration:
