--- a/www/ui/flows/index.html
+++ b/www/ui/flows/index.html
@@ -9,7 +9,7 @@
 <h2>Use-Case Process Flow With Screens</h2>
 
 <ul>
-<li><a href="bug)entry.html">Viewing and Entering a Issue</a></li>
+<li><a href="bug_entry.html">Viewing and Entering a Issue</a></li>
 <li>Deleting/Editing an Issue</li>
 </ul>
 
