--- a/www/usemodels/screens.html
+++ b/www/usemodels/screens.html
@@ -43,8 +43,18 @@
     <ul>
       <li><a href="IntegrateView.html">IntegrateView</a>
  </ul>
- 
-  <li>Errors:
+<li>Admin:
+    <ul>
+      <li><a href="ProjectEdit.html">ProjectEdit</a>
+      <li><a href="Attributes.html">Attributes</a>
+      <li><a href="DefineIssueStatus.html">DefineIssueStatus</a>
+      <li><a href="DefineStatusTransition.html">DefineStatusTransition</a>
+</ul>  
+  
+
+
+
+<li>Errors:
     <ul>
       <li><a href="InvalidIssueNumber.html">InvalidIssueNumber</a>
     </ul>  
