make the buttons submit back to the same page.

--- a/www/usemodels/attribeditor/issue-assign.html
+++ b/www/usemodels/attribeditor/issue-assign.html
@@ -120,7 +120,7 @@
       </select>
     </td>
     <td width="57" valign="top">
-      <form name="form2" method="post" action="">
+      <form name="form2" method="get" action="issue-assign.html">
         <p align="center">
           <input type="submit" name="Submit2" value="&lt;-- Assign as primary"><br>
           <input type="submit" name="Submit2" value="&lt;-- Assign as secondary">
