added new wireframes

--- a/www/usemodels/index.html
+++ b/www/usemodels/index.html
@@ -1,19 +1,23 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <title>Scarab use cases and related documents</title>
-  </head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<HTML>
 
-  
-<body bgcolor="#FFFFFF">
-    <h1>Scarab use cases and related documents</h1>
+<HEAD>
+	<META HTTP-EQUIV="Content-Type" CONTENT="text/html;CHARSET=iso-8859-1">
+	<TITLE>Scarab use cases and related documents</TITLE>
+</HEAD>
 
-<ul>
-  <li><a href="userclasses.html">User Classes</a>
-  <li><a href="usecases.html">Use Cases</a>
-  <li><a href="screens.html">Screen Descriptions</a>
-</ul>
+<BODY BGCOLOR="white">
+
+<H1>Scarab use cases and related documents</H1>
+
+<UL>
+	<LI><A HREF="userclasses.html">User Classes</A>
+	<LI><A HREF="usecases.html">Use Cases</A>
+	<LI><A HREF="screens.html">Screen Descriptions</A>
+	<LI><A HREF="wireframe/index.html">Wireframes</A>
+</UL>
 
 
-  </body>
-</html>
+</BODY>
+
+</HTML>
