fixed broken link

--- a/www/usemodels/wireframe/index.html
+++ b/www/usemodels/wireframe/index.html
@@ -9,14 +9,13 @@
 <BODY BGCOLOR="white">
 
 <H1>Wireframes</H1>
-<P>Wireframe UI models are intended to outline the contents of UI screens.  They consider issues of information
+<P>Wireframe UI models are intended to outline the contents of UI screens. They consider issues of information
 content, complexity, navigation, widget selection, rough layout, and labeling. They are not committments to final
-or fine-grained UI choices.  Wireframes should be conistent with the use cases and screen descriptions that reference
-them.  Wireframes can be clicked through, but they do not have any programmed logic. </P>
-
-<P>Wireframes contain some notes and marks that will not be in the final UI.  Specifically, text inside braces
-is a condition on the preceeding UI element.  Name of roles inside braces mean that the preceeding UI element will
-only be seen by people in that role.  Names of milestones in braces or brakets mean that the indicated UI element
+or fine-grained UI choices. Wireframes should be conistent with the use cases and screen descriptions that reference
+them. Wireframes can be clicked through, but they do not have any programmed logic.</P>
+<P>Wireframes contain some notes and marks that will not be in the final UI. Specifically, text inside braces is
+a condition on the preceeding UI element. Name of roles inside braces mean that the preceeding UI element will
+only be seen by people in that role. Names of milestones in braces or brakets mean that the indicated UI element
 will only be put in when work on that milestone begins.
 
 <UL>
@@ -31,7 +30,7 @@ will only be put in when work on that milestone begins.
 	</UL>
 	<LI>Admin
 	<UL>
-		<LI><A HREF="../atribeditor/index.html">AttributeEditor</A>
+		<LI><A HREF="../attribeditor/index.html">AttributeEditor</A>
 	</UL>
 </UL>
 
