added more screens, made buttons to to correct location

--- a/www/usemodels/wireframe/enterissuedetails.html
+++ b/www/usemodels/wireframe/enterissuedetails.html
@@ -34,81 +34,81 @@
 		<TD COLSPAN="3">[source] [ <B>issues</B>] [documents] [news] [members] [admin]</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3"><A HREF="query.html">Search</A> | <B>Enter</B> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
+<FORM ACTION="issueview.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3"><A HREF="query.html">Search</A> | <B>Enter</B> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
 			| <A HREF="prefs.html">Prefs</A> | <A HREF="options.html">Options</A> {PO} | Issue# <INPUT TYPE="TEXT" NAME="Field"
 			SIZE="5"><INPUT TYPE="SUBMIT" NAME="Submit2" VALUE="Find"></TD>
-	</TR>
+</FORM>		</TR>
 	<TR>
 		<TD COLSPAN="3">Enter a new issue (step 3 of 4)</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3">
+<FORM ACTION="newissueaddendum.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3">
 			<TABLE BORDER="1" WIDTH="100%">
 				<TR>
 					<TD WIDTH="14%" VALIGN="TOP">Issue Type:</TD>
-					<TD WIDTH="36%" VALIGN="TOP"> $type </TD>
+					<TD WIDTH="36%" VALIGN="TOP">$type</TD>
 					<TD WIDTH="20%" VALIGN="TOP">Version:</TD>
-					<TD WIDTH="30%" VALIGN="TOP"> 
+					<TD WIDTH="30%" VALIGN="TOP">
 						<SELECT NAME="Selection">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
 					</TD>
-</ol>												</TR>
+</ol>																</TR>
 				<TR>
-					<TD WIDTH="14%" VALIGN="TOP">Platform: </TD>
+					<TD WIDTH="14%" VALIGN="TOP">Platform:</TD>
 					<TD WIDTH="36%" VALIGN="TOP">
 						<SELECT NAME="Selection3">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
-					<TD WIDTH="20%" VALIGN="TOP">Operating System: </TD>
+					</TD>
+					<TD WIDTH="20%" VALIGN="TOP">Operating System:</TD>
 					<TD WIDTH="30%" VALIGN="TOP">
 						<SELECT NAME="Selection4">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
+					</TD>
 				</TR>
 				<TR>
-					<TD WIDTH="14%" VALIGN="TOP">Severity: </TD>
+					<TD WIDTH="14%" VALIGN="TOP">Severity:</TD>
 					<TD WIDTH="36%" VALIGN="TOP">
 						<SELECT NAME="Selection5">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
-					<TD WIDTH="20%" VALIGN="TOP">Priority {Dev, PO}: </TD>
+					</TD>
+					<TD WIDTH="20%" VALIGN="TOP">Priority {Dev, PO}:</TD>
 					<TD WIDTH="30%" VALIGN="TOP">
 						<SELECT NAME="Selection6">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
+					</TD>
 				</TR>
 				<TR>
-					<TD WIDTH="14%" VALIGN="TOP">Component : </TD>
+					<TD WIDTH="14%" VALIGN="TOP">Component :</TD>
 					<TD WIDTH="36%" VALIGN="TOP">
 						<SELECT NAME="Selection9" SIZE="3"  MULTIPLE>
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
-					<TD WIDTH="20%" VALIGN="TOP">Milestone {Dev, PO}: </TD>
+					</TD>
+					<TD WIDTH="20%" VALIGN="TOP">Milestone {Dev, PO}:</TD>
 					<TD WIDTH="30%" VALIGN="TOP">
 						<SELECT NAME="Selection7">
 						<OPTION SELECTED>Option 1</OPTION>
 						<OPTION>Option 2</OPTION>
 						<OPTION>Option 3</OPTION>
 						</SELECT>
- </TD>
+					</TD>
 				</TR>
 				<TR>
 					<TD VALIGN="TOP" COLSPAN="4">Full description:<A HREF="enterissuedetails.html"><BR>
@@ -120,7 +120,7 @@
 				</TR>
 			</TABLE>
 		</TD>
-	</TR>
+</form>		</TR>
 	<TR>
 		<TD COLSPAN="4">Footer</TD>
 	</TR>
