--- a/www/usemodels/wireframe/enterissue.html
+++ b/www/usemodels/wireframe/enterissue.html
@@ -34,15 +34,15 @@
 		<TD COLSPAN="3">[source] [ <B>issues</B>] [documents] [news] [members] [admin]</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3"><A HREF="query.html">Search</A> | <B>Enter</B> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
+<FORM ACTION="issueview.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3"><A HREF="query.html">Search</A> | <B>Enter</B> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
 			| <A HREF="prefs.html">Prefs</A> | <A HREF="options.html">Options</A> {PO} | Issue# <INPUT TYPE="TEXT" NAME="Field"
 			SIZE="5"><INPUT TYPE="SUBMIT" NAME="Submit2" VALUE="Find"></TD>
+</FORM>		</TR>
+	<TR>
+		<TD COLSPAN="3">Enter a new issue (step 1 of 4) (go to <A HREF="enterissueadvanced.html">advanced issue entry</A>)</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3">Enter a new issue (step 1 of 4)  (go to <A HREF="enterissueadvanced.html">advanced issue entry</A>)</TD>
-	</TR>
-	<TR>
-		<TD COLSPAN="3">
+<FORM ACTION="deduplicate.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3">
 			<TABLE BORDER="1" WIDTH="100%">
 				<TR>
 					<TD WIDTH="58%" VALIGN="TOP" ROWSPAN="5">Issue Type: 
@@ -78,24 +78,24 @@
 						<INPUT TYPE="TEXT" NAME="Field11" SIZE="48"><BR>
 						<BR>
 						<BR>
-						  <INPUT TYPE="SUBMIT" NAME="Submit" VALUE="Next >"></TD>
+						<INPUT TYPE="SUBMIT" NAME="Submit" VALUE="Next >"></TD>
 					<TD ROWSPAN="5" COLSPAN="2">
 						<TABLE BORDER="0" WIDTH="100%">
 							<TR>
 								<TD COLSPAN="2">My Saved Templates [M4?]:</TD>
-</ol>																			</TR>
+</ol>																										</TR>
 							<TR>
 								<TD WIDTH="65%">
 									<OL>
 										<LI><A HREF="query.html">Template one</A>
-										<LI><A HREF="query.html">Template two</A> <A HREF="query.html"></A>
+										<LI><A HREF="query.html">Template two</A>
 										<LI><A HREF="query.html">Template three</A>
 										<LI><A HREF="query.html">Add new</A>
 									</OL>
 								</TD>
-								<TD WIDTH="35%" VALIGN="TOP"> <A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
-									</A> <A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
-									</A> <A HREF="query.html">edit</A> | <A HREF="query.html">delete</A></TD>
+								<TD WIDTH="35%" VALIGN="TOP"><A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
+									edit</A> | <A HREF="query.html">delete<BR>
+									edit</A> | <A HREF="query.html">delete</A></TD>
 							</TR>
 							<TR>
 								<TD COLSPAN="2">
@@ -105,15 +105,15 @@ Common Templates [M4?]:</TD>
 							<TR>
 								<TD WIDTH="65%">
 									<OL>
-										<LI><A HREF="query.html">Template one</A> 
+										<LI><A HREF="query.html">Template one</A>
 										<LI><A HREF="query.html">Template two</A>
-										<LI><A HREF="query.html">Template three</A> <A HREF="query.html"></A>
+										<LI><A HREF="query.html">Template three</A>
 										<LI><A HREF="query.html">Add/Suggest new</A>
 									</OL>
 								</TD>
-								<TD WIDTH="35%" VALIGN="TOP"> <A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
-									</A> <A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
-									</A> <A HREF="query.html">edit</A> | <A HREF="query.html">delete</A></TD>
+								<TD WIDTH="35%" VALIGN="TOP"><A HREF="query.html">edit</A> | <A HREF="query.html">delete<BR>
+									edit</A> | <A HREF="query.html">delete<BR>
+									edit</A> | <A HREF="query.html">delete</A></TD>
 							</TR>
 							<TR>
 								<TD COLSPAN="2">
@@ -129,7 +129,7 @@ My Recent Issues [M4?]</P>
 							</TR>
 						</TABLE>
 					</TD>
-</ol>																</TR>
+</ol>																				</TR>
 				<TR>
 				</TR>
 				<TR>
@@ -140,17 +140,15 @@ My Recent Issues [M4?]</P>
 				</TR>
 			</TABLE>
 		</TD>
-	</TR>
+</FORM>			</TR>
 	<TR>
 		<TD COLSPAN="4">Footer</TD>
 	</TR>
 </TABLE>
 </P>
-
 <P>
 <HR ALIGN="CENTER">
 </P>
-
 <P>Notes:</P>
 
 <UL>
