--- a/www/usemodels/wireframe/query.html
+++ b/www/usemodels/wireframe/query.html
@@ -34,15 +34,15 @@
 		<TD COLSPAN="3">[source] [ <B>issues</B>] [documents] [news] [members] [admin]</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3"><B>Search</B> | <A HREF="enterissue.html">Enter</A> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
+<FORM ACTION="IssueView.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3"><B>Search</B> | <A HREF="enterissue.html">Enter</A> | <A HREF="myissues.html">My Issues</A> | <A HREF="reports.html">Reports</A>
 			| <A HREF="prefs.html">Prefs</A> | <A HREF="options.html">Options</A> {PO} | Issue# <INPUT TYPE="TEXT" NAME="Field"
 			SIZE="5"><INPUT TYPE="SUBMIT" NAME="Submit2" VALUE="Find"></TD>
-	</TR>
+</FORM>		</TR>
 	<TR>
 		<TD COLSPAN="3">Search for existing issues (go to <A HREF="advancedsearch.html">advanced search</A>)</TD>
 	</TR>
 	<TR>
-		<TD COLSPAN="3">
+<FORM ACTION="IssueList.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">				<TD COLSPAN="3">
 			<TABLE BORDER="1" WIDTH="100%">
 				<TR>
 					<TD WIDTH="64%">
@@ -93,9 +93,9 @@
 							<TR>
 								<TD WIDTH="66%" VALIGN="TOP">
 									<OL>
-										<LI><A HREF="query.html">Search one</A> 
+										<LI><A HREF="query.html">Search one</A>
 										<LI><A HREF="query.html">Search two</A>
-										<LI><A HREF="query.html">Search three</A> 
+										<LI><A HREF="query.html">Search three</A>
 										<LI><A HREF="query.html">Add new</A>
 									</OL>
 								</TD>
@@ -111,9 +111,9 @@ Common Searches [M2]:</TD>
 							<TR>
 								<TD WIDTH="66%" VALIGN="TOP">
 									<OL>
-										<LI><A HREF="query.html">Search one</A> 
-										<LI><A HREF="query.html">Search two</A> 
-										<LI><A HREF="query.html">Search three</A> 
+										<LI><A HREF="query.html">Search one</A>
+										<LI><A HREF="query.html">Search two</A>
+										<LI><A HREF="query.html">Search three</A>
 										<LI><A HREF="query.html">Add/Suggest new</A>
 									</OL>
 								</TD>
@@ -135,10 +135,10 @@ My Recent Searches [M3]</P>
 							</TR>
 						</TABLE>
 					</TD>
-</ol>																</TR>
+</ol>																				</TR>
 			</TABLE>
 		</TD>
-	</TR>
+</FORM>		</TR>
 	<TR>
 		<TD COLSPAN="4">Footer</TD>
 	</TR>
