sketched out the remaining items on the "task links" line

--- a/www/usemodels/wireframe/workflow.html
+++ b/www/usemodels/wireframe/workflow.html
@@ -35,21 +35,18 @@
 	</TR>
 	<TR>
 <FORM ACTION="issueview.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">																<TD COLSPAN="3"><A HREF="query.html">Search</A> | <A HREF="enterissue.html">Enter</A> | <A HREF="myissues.html">My Issues</A> |
-			<A HREF="reports.html">Reports</A> | <B>Prefs</B> | <A HREF="options.html">Options</A> {PO} | Issue# <INPUT TYPE="TEXT"
+			<A HREF="reports.html">Reports</A> | <A HREF="prefs.html">Prefs</A> | <B>Options</B> {PO} | Issue# <INPUT TYPE="TEXT"
 			NAME="Field" SIZE="5"><INPUT TYPE="SUBMIT" NAME="Submit2" VALUE="Find"></TD>
 </FORM>								</TR>
 	<TR>
-		<TD COLSPAN="3">Edit your issue tracking preferences</TD>
+		<TD COLSPAN="3"><A HREF="options.html">Attributes</A> | <B>Workflow</B></TD>
 	</TR>
 	<TR>
 <FORM ACTION="prefschangedconfirmation.html" METHOD="POST" ENCTYPE="application/x-www-form-urlencoded">																<TD
 		COLSPAN="3">
 			<TABLE BORDER="1" WIDTH="100%">
 				<TR>
-					<TD WIDTH="58%" VALIGN="TOP" ROWSPAN="5">preferences form<BR>
-						<BR>
-						<BR>
-						<INPUT TYPE="SUBMIT" NAME="Submit" VALUE="Submit"></TD>
+					<TD WIDTH="58%" VALIGN="TOP" ROWSPAN="5">TBD</TD>
 </ol>																																												</TR>
 				<TR>
 				</TR>
