--- a/src/main/org/jboss/security/package.html
+++ b/src/main/org/jboss/security/package.html
@@ -1,1 +1,4 @@
-The basic security interfaces and classes.
+<body>
+The basic security interfaces and classes are now located in the
+jbosssx module.
+</body>
