--- a/src/main/org/jboss/security/plugins/package.html
+++ b/src/main/org/jboss/security/plugins/package.html
@@ -1,1 +1,3 @@
-Security plugins: implementations for use in the real life.
+<body>
+Security plugins have moved to the jbosssx cvs module.
+</body>
